--- a/index.html
+++ b/index.html
@@ -9,62 +9,43 @@ transitional.dtd">
 "http://www.w3.org/1999/xhtml"
 >
 <head>
-<meta
-http
--
-equiv=
-"Content
--
-Type"
-content=
-"text/html; charset=iso
--
-8859
--
-1"
-/>
-<title>
-Ejercicio de selectores
-</title>
-<style
-type=
-"text/css"
->
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
+<title>Ejercicio de selectores</title>
+<style type="text/css">
 /* Todos los elementos de la pagina */
-{ font: 1em/1.3 Arial, Helvetica, sans
--
-serif; }
-/* Todos los
-párrafos
-de la pagina */
+*
+{ font: 1em/1.3 Arial, Helvetica, sans-serif; }
+
+/* Todos los párrafos de la pagina */
+p
 { color: #555; }
-/* Todos los párrafos contenidos en
-#primero */
+
+/* Todos los párrafos contenidos en #primero */
+#primero p
 { color: #336699; }
+
 /* Todos los enlaces la pagina */
+a
 { color: #CC3300; }
+
 /* Los elementos "em" contenidos en #primero */
+#primero em
 { background: #FFFFCC; padding: .1em; }
-/* Todos los elementos "em" de clase "especial" en toda la
-pagina */
+
+/* Todos los elementos "em" de clase "especial" en toda la pagina */
+em, .especial
 { background: #FFCC99; border: 1px solid #FF9900; padding: .1em; }
+
 /* Elementos "span" contenidos en .normal */
-{ font
--
-weight: bold; }
+.normal span
+{ font-weight: bold; }
 </style>
 </head>
 <body>
-<div
-id=
-"primero"
->
+<div id="primero">
 <p>
 Lorem ipsum dolor sit amet,
-<a
-href=
-"#"
->
+<a href="#">
 consectetuer adipiscing elit
 </a>
 . Pra
@@ -77,40 +58,18 @@ lorem sem aliquam nulla
 lacinia velit mi vestibulum enim.
 </p>
 </div>
-Sistemas Expertos
-Desarrollo Web
-CSS
-–
-Ejercicio 1
-Ing. Edwin R. Paredes
-13
-/07/2017
-Página
-2
-de
-2
-<div
-class=
-"normal"
->
+Sistemas Expertos Desarrollo Web CSS–Ejercicio 1 Ing. Edwin R. Paredes 13/07/2017 Página 2 de 2 
+<div class= "normal">
 <p>
 Phasellus eu velit sed lorem sodales egestas. Ut feugiat.
-<span><a
-href=
-"#"
->
-D
-onec porttitor
+<span><a href="#">
+Donec porttitor
 </a>
 , magna eu varius luctus,
 </span>
 metus massa tristique mass
 a, in imperdiet est velit vel magna. Phasellus erat. Duis risus.
-<a
-href=
-"
-#"
->
+<a href="#">
 Maecenas dictum
 </a>
 , nibh vitae pellentesque auctor, tellus velit consectetue
@@ -118,31 +77,18 @@ r tellus, tempor pretium felis tellus at metus.
 </p>
 <p>
 Cum sociis natoque
-<em
-class=
-"especial"
->
+<em class="especial">
 penatibus et magnis
 </em>
-dis parturi
-ent montes, nascetur ridiculus
-mus. Proin aliquam convallis ante. Pellentesqu
-e habitant morbi tristique senectus et netus et malesuada fames ac turpis ege
-stas. Nunc aliquet. Sed eu metus. Duis justo.
+dis parturi ent montes, nascetur ridiculus mus. Proin aliquam convallis ante. Pellentesqu e habitant morbi tristique senectus et netus et malesuada fames acurpis egestas. Nunc aliquet. Sed eu metus. Duis justo.
 </p>
 <p>
 Donec facilisis blandit velit. Vestibulum nisi. Proin volutpat,
-<em
-class=
-"especial"
->
+<em class="especial">
 enim id iaculis congue
 </em>
 , orci justo ultrices tortor,
-<a
-href=
-"#"
->
+<a href="#">
 quis lacinia eros libero in eros
 </a>
 . Sed malesuada dui vel quam.
